# ai-brain-eu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  EU_AI_ACT_COMPLIANCE.md  GETTING_STARTED.md  GETTING_STARTED_ARABIC.md  GETTING_STARTED_CZECH.md  GETTING_STARTED_DUTCH.md  GETTING_STARTED_FRENCH.md  GETTING_STARTED_GERMAN.md  GETTING_STARTED_GREEK.md  GETTING_STARTED_ITALIAN.md  GETTING_STARTED_POLISH.md  GETTING_STARTED_PORTUGUESE.md  GETTING_STARTED_ROMANIAN.md  GETTING_STARTED_SPANISH.md  GETTING_STARTED_SWEDISH.md  KNOWLEDGE_PROVENANCE.md  MODEL_SETUP.md  NO_PII_NO_DATA.md  README.md  SCOPE.md  SECURITY.md  TRANSLATION_HELP_WANTED.md  _v02_knowledge_layer_crossref.md  config.toml.template  pyproject.toml  setup.sh
_drafting_data/: 01-contract-template-dpa.md  02-compliance-template-data-breach-notification.md  03-compliance-template-dpia.md  04-compliance-template-ropa.md  05-compliance-template-bcrs.md  06-compliance-template-ai-act-conformity.md  07-compliance-template-ai-act-fria.md  08-compliance-template-privacy-policy.md  10-compliance-template-dsa-statement-of-reasons.md  100-insolvency-eu-main-proceedings-reg-2015-848.md  101-insolvency-eu-secondary-proceedings.md  11-contract-template-sccs.md  110-tribunal-euipo-boards-of-appeal.md  12-contract-template-employment.md  120-contract-commercial-agency-directive-86-653.md  121-contract-franchise-vber-2022-720.md  122-contract-distribution-vber-2022-720.md  123-contract-technology-transfer-ttber-316-2014.md  125-contract-saas-data-act-2023-2854.md  126-contract-data-sharing-dga-2022-868.md  127-public-procurement-bid-directive-2014-24.md  128-contract-mica-crypto-asset-service-2023-1114.md  129-contract-dora-financial-entity-2022-2554.md  15-contract-template-choice-of-law.md  16-compliance-template-ai-transparency-notice.md  17-compliance-template-nis2-incident-notification.md  18-compliance-template-cra-declaration-of-conformity.md  (+33 more)
(+134 files in other folders)
