[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ailawfirm_eu"
version = "0.1.0"
description = "AI Brain — EU Solo edition. Practice OS for EU solo advocates. Built on local memory architecture. Includes AI Act compliance + 13-language onboarding."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Rushikesh R. Mahajan", email = "advrushikeshravindramahajan@gmail.com"},
]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
    "icalendar>=5.0",
]

[project.urls]
Homepage = "https://github.com/Wolfgangrush/ai-law-firm-eu"
Repository = "https://github.com/Wolfgangrush/ai-law-firm-eu"
"Bug Tracker" = "https://github.com/Wolfgangrush/ai-law-firm-eu/issues"

[tool.setuptools.packages.find]
include = ["ailawfirm_eu*"]

[tool.setuptools.package-data]
ailawfirm_eu = ["templates/*.md", "templates/*.toml"]

[project.scripts]
ailawfirm-eu = "ailawfirm_eu:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0", "twine>=4.0"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
